@@ -254,7 +254,7 @@ Actions and undo/redo
 		Undoable by remembering position, similar to Remove, where
 		the component was before.
 
-	[ ]  ResetAction
+	[X]  ResetAction
 		Undoable by keeping a clone of the entire old state.
 
 	[ ]  Undo/redo commands should show what they are doing, e.g.
