@@ -6,7 +6,7 @@ CXXFLAGS=$(CXXFLAGSBASE) $(CPEDANTIC) $(XINCLUDE) $(INCLUDE2)
 LIBS=$(XLIB) $(OTHERLIBS)
 
 OBJS=AddComponentAction.o ClearEmulationAction.o LoadEmulationAction.o \
-	RemoveComponentAction.o
+	RemoveComponentAction.o ResetAction.o
 
 all: $(OBJS)
 
