@@ -4047,3 +4047,4 @@ Changelog for GXemul:
 		Run/Pause buttons stay down while in the Running/Paused
 		runstates. (Also making the icons smaller by not showing text
 		labels, and enabling tooltips instead. Looks/feels nicer.)
+		Implementing an undoable ResetAction.
